feat(back): add restaurant routes, repository and interfaces
